# web-test-lib

./: Jenkinsfile  README.md  conftest.py  pyproject.toml
pages/: base.py  cart.py  contact.py  home.py  shop.py
tests/: test_cart.py  test_contact.py
